Bug 864562 - Use CSS variables for lightweight theme styling. r=MattN
Original patch written by Raj Meghpara <meghpararajkumargmail.com>

MozReview-Commit-ID: 8z6tmUG0gdN

UltraBlame original commit: 85736c04bf9615112586a0f4735433889b47677c

--- a/browser/themes/osx/browser-lightweightTheme.css
+++ b/browser/themes/osx/browser-lightweightTheme.css
@@ -66,7 +66,7 @@ inc
 *
 LightweightThemeListener
 will
-append
+set
 the
 current
 lightweight
@@ -78,10 +78,14 @@ header
 image
 to
 the
-background
+lwt
+-
+header
 -
 image
-for
+variable
+used
+in
 each
 of
 the
@@ -209,13 +213,17 @@ background
 image
 :
 fgTabTextureLWT
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
 ;
-/
-*
-lwtHeader
-;
-*
-/
 background
 -
 position
@@ -320,13 +328,17 @@ middle
 png
 )
 fgTabTextureLWT
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
 ;
-/
-*
-lwtHeader
-;
-*
-/
 background
 -
 position
@@ -432,12 +444,16 @@ middle
 png
 )
 fgTabTextureLWT
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
 ;
-/
-*
-lwtHeader
-;
-*
-/
 }
 }
