--- a/browser/themes/windows/browser-lightweightTheme.css
+++ b/browser/themes/windows/browser-lightweightTheme.css
@@ -69,7 +69,7 @@ substitution
 *
 LightweightThemeListener
 will
-append
+set
 the
 current
 lightweight
@@ -81,10 +81,14 @@ header
 image
 to
 the
-background
+lwt
+-
+header
 -
 image
-for
+variable
+used
+in
 each
 of
 the
@@ -212,13 +216,17 @@ background
 image
 :
 fgTabTextureLWT
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
 ;
-/
-*
-lwtHeader
-;
-*
-/
 background
 -
 position
@@ -323,13 +331,17 @@ middle
 png
 )
 fgTabTextureLWT
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
 ;
-/
-*
-lwtHeader
-;
-*
-/
 background
 -
 position
@@ -437,12 +449,16 @@ middle
 png
 )
 fgTabTextureLWT
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
 ;
-/
-*
-lwtHeader
-;
-*
-/
 }
 }
