Bug 864562 - Declare lwtheme CSS in tabs.inc.css since we don't need to iterate rules anymore. r=MattN
MozReview-Commit-ID: 4N48zKJUVWs

UltraBlame original commit: 14640efe40849611256ec23c64330845af41a49b

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -3662,11 +3662,17 @@ theme
 styles
 .
 See
-browser
--
-lightweightTheme
-.
-css
+the
+"
+Lightweight
+theme
+on
+tabs
+"
+section
+of
+this
+file
 for
 information
 about
@@ -3731,12 +3737,6 @@ fgTabTextureLWT
 ;
 /
 *
-lwtHeader
-;
-*
-/
-/
-*
 Don
 '
 t
@@ -3779,11 +3779,18 @@ are
 normally
 overridden
 by
-browser
--
-lightweightTheme
+the
+"
+Lightweight
+theme
+on
+tabs
+"
+section
+of
+this
+file
 .
-css
 *
 /
 .
@@ -3892,6 +3899,310 @@ background
 color
 :
 transparent
+;
+}
+/
+*
+*
+LightweightThemeListener
+will
+set
+the
+current
+lightweight
+theme
+'
+s
+header
+*
+image
+to
+the
+lwt
+-
+header
+-
+image
+variable
+used
+in
+each
+of
+the
+following
+rulesets
+.
+*
+/
+/
+*
+Lightweight
+theme
+on
+tabs
+*
+/
+#
+tabbrowser
+-
+tabs
+:
+not
+(
+[
+movingtab
+]
+)
+>
+.
+tabbrowser
+-
+tab
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+>
+.
+tab
+-
+background
+-
+start
+[
+selected
+=
+true
+]
+:
+-
+moz
+-
+lwtheme
+:
+:
+before
+#
+tabbrowser
+-
+tabs
+:
+not
+(
+[
+movingtab
+]
+)
+>
+.
+tabbrowser
+-
+tab
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+>
+.
+tab
+-
+background
+-
+end
+[
+selected
+=
+true
+]
+:
+-
+moz
+-
+lwtheme
+:
+:
+before
+{
+background
+-
+attachment
+:
+scroll
+fixed
+;
+background
+-
+color
+:
+transparent
+;
+background
+-
+image
+:
+fgTabTextureLWT
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
+;
+background
+-
+position
+:
+0
+0
+right
+top
+;
+background
+-
+repeat
+:
+repeat
+-
+x
+no
+-
+repeat
+;
+}
+#
+tabbrowser
+-
+tabs
+:
+not
+(
+[
+movingtab
+]
+)
+>
+.
+tabbrowser
+-
+tab
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+>
+.
+tab
+-
+background
+-
+middle
+[
+selected
+=
+true
+]
+:
+-
+moz
+-
+lwtheme
+{
+background
+-
+attachment
+:
+scroll
+scroll
+fixed
+;
+background
+-
+color
+:
+transparent
+;
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+active
+-
+middle
+.
+png
+)
+fgTabTextureLWT
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
+;
+background
+-
+position
+:
+0
+0
+0
+0
+right
+top
+;
+background
+-
+repeat
+:
+repeat
+-
+x
+repeat
+-
+x
+no
+-
+repeat
 ;
 }
 /
@@ -5281,6 +5592,88 @@ end
 2x
 .
 png
+)
+;
+}
+#
+tabbrowser
+-
+tabs
+:
+not
+(
+[
+movingtab
+]
+)
+>
+.
+tabbrowser
+-
+tab
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+>
+.
+tab
+-
+background
+-
+middle
+[
+selected
+=
+true
+]
+:
+-
+moz
+-
+lwtheme
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+active
+-
+middle
+2x
+.
+png
+)
+fgTabTextureLWT
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
 )
 ;
 }
