Bug 864562 - Move remaining LWT inline styles to CSS variables. r=mikedeboer
MozReview-Commit-ID: 9ETddCw9w14

UltraBlame original commit: 9c6075b44bd9fa8ee8c5f78cc05058615102678d

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -753,6 +753,49 @@ image
 none
 ;
 }
+:
+root
+{
+color
+:
+var
+(
+-
+-
+lwt
+-
+textcolor
+)
+;
+background
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+accentcolor
+)
+;
+background
+-
+image
+:
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
+;
+}
 #
 urlbar
 :
@@ -27907,6 +27950,45 @@ ordinal
 group
 :
 0
+;
+}
+#
+browser
+-
+bottombox
+:
+-
+moz
+-
+lwtheme
+{
+background
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+accentcolor
+)
+;
+background
+-
+image
+:
+var
+(
+-
+-
+lwt
+-
+footer
+-
+image
+)
 ;
 }
 %
