--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -919,6 +919,49 @@ rgba
 )
 ;
 }
+:
+root
+{
+color
+:
+var
+(
+-
+-
+lwt
+-
+textcolor
+)
+;
+background
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+accentcolor
+)
+;
+background
+-
+image
+:
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
+;
+}
 #
 menubar
 -
@@ -3278,6 +3321,45 @@ moz
 appearance
 :
 toolbox
+;
+}
+#
+browser
+-
+bottombox
+:
+-
+moz
+-
+lwtheme
+{
+background
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+accentcolor
+)
+;
+background
+-
+image
+:
+var
+(
+-
+-
+lwt
+-
+footer
+-
+image
+)
 ;
 }
 #
