--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -494,6 +494,49 @@ image
 none
 ;
 }
+:
+root
+{
+color
+:
+var
+(
+-
+-
+lwt
+-
+textcolor
+)
+;
+background
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+accentcolor
+)
+;
+background
+-
+image
+:
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
+;
+}
 #
 menubar
 -
@@ -1190,6 +1233,45 @@ color
 moz
 -
 Dialog
+;
+}
+#
+browser
+-
+bottombox
+:
+-
+moz
+-
+lwtheme
+{
+background
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+accentcolor
+)
+;
+background
+-
+image
+:
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
 ;
 }
 /
