Bug 864562 - Fix the tests and move more logic from JS to CSS now that the values exist as CSS Variables. r=mikedeboer
MozReview-Commit-ID: BuJdjtVBnin

UltraBlame original commit: 0a0a200dd138d6cfb92c345840cbc5cac940d3cf

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -154,6 +154,78 @@ duration
 150ms
 ;
 }
+:
+root
+:
+-
+moz
+-
+lwtheme
+{
+color
+:
+var
+(
+-
+-
+lwt
+-
+textcolor
+)
+!
+important
+;
+}
+:
+root
+:
+-
+moz
+-
+lwtheme
+:
+not
+(
+[
+customization
+-
+lwtheme
+]
+)
+{
+background
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+accentcolor
+)
+!
+important
+;
+background
+-
+image
+:
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
+!
+important
+;
+}
 #
 main
 -
@@ -3246,6 +3318,34 @@ position
 :
 bottom
 left
+;
+background
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+accentcolor
+)
+;
+background
+-
+image
+:
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
 ;
 }
 .
