--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -83,6 +83,258 @@ duration
 main
 -
 window
+[
+customization
+-
+lwtheme
+]
+#
+tab
+-
+view
+-
+deck
+:
+-
+moz
+-
+lwtheme
+{
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+background
+-
+position
+:
+right
+top
+;
+background
+-
+attachment
+:
+fixed
+;
+background
+-
+color
+:
+transparent
+;
+background
+-
+image
+:
+-
+moz
+-
+image
+-
+rect
+(
+var
+(
+-
+-
+lwt
+-
+header
+-
+image
+)
+0
+100
+%
+var
+(
+-
+-
+toolbox
+-
+rect
+-
+height
+)
+0
+)
+linear
+-
+gradient
+(
+to
+bottom
+var
+(
+-
+-
+lwt
+-
+accentcolor
+)
+calc
+(
+var
+(
+-
+-
+toolbox
+-
+rect
+-
+height
+-
+with
+-
+unit
+)
+-
+1px
+)
+rgba
+(
+0
+0
+0
+0
+.
+25
+)
+calc
+(
+var
+(
+-
+-
+toolbox
+-
+rect
+-
+height
+-
+with
+-
+unit
+)
+-
+1px
+)
+rgba
+(
+0
+0
+0
+0
+.
+25
+)
+calc
+(
+var
+(
+-
+-
+toolbox
+-
+rect
+-
+height
+-
+with
+-
+unit
+)
++
+1px
+)
+rgba
+(
+255
+255
+255
+0
+.
+5
+)
+calc
+(
+var
+(
+-
+-
+toolbox
+-
+rect
+-
+height
+-
+with
+-
+unit
+)
++
+1px
+)
+rgba
+(
+255
+255
+255
+0
+.
+5
+)
+calc
+(
+var
+(
+-
+-
+toolbox
+-
+rect
+-
+height
+-
+with
+-
+unit
+)
++
+2px
+)
+transparent
+calc
+(
+var
+(
+-
+-
+toolbox
+-
+rect
+-
+height
+-
+with
+-
+unit
+)
++
+2px
+)
+)
+;
+}
+#
+main
+-
+window
 :
 -
 moz
