Bug 864562 - Rename lwt-accentcolor to lwt-accent-color and lwt-textcolor to lwt-text-color. r=mikedeboer
MozReview-Commit-ID: 2fmGrsiFFr2

UltraBlame original commit: d48b6ebcda5c614a89ca2020f5f52658c9fa4ff1

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -170,7 +170,9 @@ var
 -
 lwt
 -
-textcolor
+text
+-
+color
 )
 !
 important
@@ -203,7 +205,9 @@ var
 -
 lwt
 -
-accentcolor
+accent
+-
+color
 )
 !
 important
@@ -3329,7 +3333,9 @@ var
 -
 lwt
 -
-accentcolor
+accent
+-
+color
 )
 ;
 background
