--- a/browser/themes/shared/compacttheme.inc.css
+++ b/browser/themes/shared/compacttheme.inc.css
@@ -2052,6 +2052,117 @@ start
 0
 ;
 }
+window
+:
+not
+(
+[
+chromehidden
+~
+=
+"
+toolbar
+"
+]
+)
+#
+urlbar
+-
+wrapper
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+window
+:
+not
+(
+[
+chromehidden
+~
+=
+"
+toolbar
+"
+]
+)
+#
+urlbar
+-
+wrapper
+>
+#
+urlbar
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+/
+*
+Resolves
+text
+blurring
+issue
+when
+hovering
+see
+bug
+1340206
+*
+/
+transform
+:
+none
+;
+/
+*
+For
+some
+reason
+this
+property
+must
+be
+specified
+here
+even
+though
+the
+same
+value
+is
+set
+in
+the
+previous
+rule
+set
+.
+o_O
+*
+/
+margin
+-
+inline
+-
+start
+:
+0
+;
+}
 #
 urlbar
 -
