Bug 1341514 - Using the valid update url provider in test. r=gcp
MozReview-Commit-ID: 50NcRd2e9hB

UltraBlame original commit: 30dc81445a1b3c927af48b3522bd14a0cfe501d4

--- a/toolkit/components/url-classifier/tests/mochitest/test_reporturl.html
+++ b/toolkit/components/url-classifier/tests/mochitest/test_reporturl.html
@@ -864,6 +864,8 @@ resolve
 (
 )
 ;
+return
+;
 }
 button
 .
@@ -1294,6 +1296,33 @@ report
 button
 is
 showed
+.
+/
+/
+Test
+provider
+needs
+a
+valid
+update
+URL
+(
+mozilla
+for
+example
+)
+otherwise
+/
+/
+the
+updates
+inserting
+the
+test
+data
+will
+fail
+.
 {
 topUrl
 :
@@ -1333,7 +1362,7 @@ simple
 provider
 :
 "
-fake
+mozilla
 "
 blockCreater
 :
