--- a/browser/themes/shared/downloads/indicator.inc.css
+++ b/browser/themes/shared/downloads/indicator.inc.css
@@ -119,12 +119,79 @@ height
 :
 0
 ;
-transition
-:
-height
-0
+/
+*
+From
+javascript
+side
+we
+use
+animation
+delay
+from
+0s
+to
+-
+100s
+to
+show
+*
+corresponding
+frames
+needed
+for
+progress
 .
-5s
+*
+animation
+-
+delay
+is
+set
+to
+a
+positive
+value
+to
+make
+nothing
+shown
+.
+*
+/
+animation
+-
+play
+-
+state
+:
+paused
+;
+animation
+-
+delay
+:
+1s
+;
+animation
+-
+duration
+:
+100s
+;
+animation
+-
+timing
+-
+function
+:
+linear
+;
+animation
+-
+name
+:
+indicatorArrowProgress
 ;
 }
 toolbar
@@ -159,4 +226,86 @@ attention
 inverted
 )
 ;
+animation
+-
+name
+:
+indicatorArrowProgressDark
+;
+}
+keyframes
+indicatorArrowProgress
+{
+0
+%
+{
+height
+:
+35
+%
+;
+filter
+:
+brightness
+(
+1
+.
+2
+)
+;
+}
+100
+%
+{
+height
+:
+87
+%
+;
+filter
+:
+brightness
+(
+1
+)
+;
+}
+}
+keyframes
+indicatorArrowProgressDark
+{
+0
+%
+{
+height
+:
+35
+%
+;
+filter
+:
+brightness
+(
+0
+.
+7
+)
+;
+}
+100
+%
+{
+height
+:
+87
+%
+;
+filter
+:
+brightness
+(
+1
+)
+;
+}
 }
