Bug 1335539 - Get rid of nsIDOMWindowUtils.wrapDOMFile, r=smaug, r=Gijs
UltraBlame original commit: 429ff39f3d28b195fb5ee1467cd8126bab3d89b8

--- a/toolkit/components/extensions/test/mochitest/test_chrome_ext_downloads_saveAs.html
+++ b/toolkit/components/extensions/test/mochitest/test_chrome_ext_downloads_saveAs.html
@@ -234,6 +234,14 @@ if
 (
 delta
 .
+id
+=
+=
+id
+&
+&
+delta
+.
 state
 .
 current
@@ -349,20 +357,15 @@ init
 window
 )
 ;
+const
+file
+=
+yield
 MockFilePicker
 .
 useAnyFile
 (
 )
-;
-const
-[
-file
-]
-=
-MockFilePicker
-.
-returnFiles
 ;
 yield
 extension
@@ -417,6 +420,21 @@ download
 works
 with
 saveAs
+"
+)
+;
+ok
+(
+file
+.
+exists
+(
+)
+"
+the
+file
+exists
+.
 "
 )
 ;
