Backed out 2 changesets (bug 1334975, bug 1335539) for merge conflicts a=backout
Backed out changeset 429ff39f3d28 (bug 1335539)
Backed out changeset eea959a93ce4 (bug 1334975)

MozReview-Commit-ID: GlvA0B0vHRT

UltraBlame original commit: 63c4e77cfe90e90d35d85e1a4821015823c4ecee

--- a/toolkit/components/extensions/test/mochitest/test_chrome_ext_downloads_saveAs.html
+++ b/toolkit/components/extensions/test/mochitest/test_chrome_ext_downloads_saveAs.html
@@ -234,14 +234,6 @@ if
 (
 delta
 .
-id
-=
-=
-id
-&
-&
-delta
-.
 state
 .
 current
@@ -357,15 +349,20 @@ init
 window
 )
 ;
-const
-file
-=
-yield
 MockFilePicker
 .
 useAnyFile
 (
 )
+;
+const
+[
+file
+]
+=
+MockFilePicker
+.
+returnFiles
 ;
 yield
 extension
@@ -420,21 +417,6 @@ download
 works
 with
 saveAs
-"
-)
-;
-ok
-(
-file
-.
-exists
-(
-)
-"
-the
-file
-exists
-.
 "
 )
 ;
