Bug 1343524 - Split en-US beetmover config r=jlund a=release DONTBUILD
MozReview-Commit-ID: L6EHksI3V7o

UltraBlame original commit: 60be4c3bdc769cf73e4de110817dbb98479ead7d

--- a/testing/mozharness/configs/beetmover/en_us_build.yml.tmpl
+++ b/testing/mozharness/configs/beetmover/en_us_build.yml.tmpl
@@ -45,202 +45,23 @@ in
 locales
 %
 }
-#
-common
-deliverables
 {
 {
 locale
 }
 }
 :
-complete_mar
-:
-artifact
-:
 {
-{
-artifact_base_url
-}
-}
-/
-firefox
--
-{
-{
-app_version
-}
-}
-.
-{
-{
-locale
-}
-}
-.
-{
-{
+%
+if
 platform
+=
+=
+"
+win32
+"
+%
 }
-}
-.
-complete
-.
-mar
-s3_key
-:
-{
-{
-s3_prefix
-}
-}
-update
-/
-{
-{
-platform
-}
-}
-/
-{
-{
-locale
-}
-}
-/
-firefox
--
-{
-{
-version
-}
-}
-.
-complete
-.
-mar
-checksum
-:
-artifact
-:
-{
-{
-artifact_base_url
-}
-}
-/
-firefox
--
-{
-{
-app_version
-}
-}
-.
-{
-{
-locale
-}
-}
-.
-{
-{
-platform
-}
-}
-.
-checksums
-s3_key
-:
-{
-{
-s3_prefix
-}
-}
-{
-{
-platform
-}
-}
-/
-{
-{
-locale
-}
-}
-/
-firefox
--
-{
-{
-version
-}
-}
-.
-checksums
-checksum_sig
-:
-artifact
-:
-{
-{
-artifact_base_url
-}
-}
-/
-firefox
--
-{
-{
-app_version
-}
-}
-.
-{
-{
-locale
-}
-}
-.
-{
-{
-platform
-}
-}
-.
-checksums
-.
-asc
-s3_key
-:
-{
-{
-s3_prefix
-}
-}
-{
-{
-platform
-}
-}
-/
-{
-{
-locale
-}
-}
-/
-firefox
--
-{
-{
-version
-}
-}
-.
-checksums
-.
-asc
 buildinfo
 :
 artifact
@@ -541,217 +362,6 @@ locale
 }
 .
 xpi
-{
-%
-if
-platform
-=
-=
-"
-win32
-"
-%
-}
-full_installer
-:
-artifact
-:
-{
-{
-artifact_base_url
-}
-}
-/
-firefox
--
-{
-{
-app_version
-}
-}
-.
-{
-{
-locale
-}
-}
-.
-{
-{
-platform
-}
-}
-.
-installer
-.
-exe
-s3_key
-:
-{
-{
-s3_prefix
-}
-}
-{
-{
-platform
-}
-}
-/
-{
-{
-locale
-}
-}
-/
-Firefox
-Setup
-{
-{
-version
-}
-}
-.
-exe
-{
-%
-if
-"
-esr
-"
-not
-in
-version
-%
-}
-stub_installer
-:
-artifact
-:
-{
-{
-artifact_base_url
-}
-}
-/
-firefox
--
-{
-{
-app_version
-}
-}
-.
-{
-{
-locale
-}
-}
-.
-{
-{
-platform
-}
-}
-.
-installer
--
-stub
-.
-exe
-s3_key
-:
-{
-{
-s3_prefix
-}
-}
-{
-{
-platform
-}
-}
-/
-{
-{
-locale
-}
-}
-/
-Firefox
-Setup
-Stub
-{
-{
-version
-}
-}
-.
-exe
-{
-%
-endif
-%
-}
-package
-:
-artifact
-:
-{
-{
-artifact_base_url
-}
-}
-/
-firefox
--
-{
-{
-app_version
-}
-}
-.
-{
-{
-locale
-}
-}
-.
-{
-{
-platform
-}
-}
-.
-zip
-s3_key
-:
-{
-{
-s3_prefix
-}
-}
-{
-{
-platform
-}
-}
-/
-{
-{
-locale
-}
-}
-/
-firefox
--
-{
-{
-version
-}
-}
-.
-zip
 symbols
 :
 artifact
@@ -935,7 +545,7 @@ win64
 "
 %
 }
-full_installer
+buildinfo
 :
 artifact
 :
@@ -965,9 +575,7 @@ platform
 }
 }
 .
-installer
-.
-exe
+json
 s3_key
 :
 {
@@ -987,16 +595,16 @@ locale
 }
 }
 /
-Firefox
-Setup
+firefox
+-
 {
 {
 version
 }
 }
 .
-exe
-package
+json
+mozinfo
 :
 artifact
 :
@@ -1026,7 +634,9 @@ platform
 }
 }
 .
-zip
+mozinfo
+.
+json
 s3_key
 :
 {
@@ -1054,7 +664,187 @@ version
 }
 }
 .
+mozinfo
+.
+json
+socorroinfo
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+firefox
+-
+{
+{
+app_version
+}
+}
+.
+{
+{
+locale
+}
+}
+.
+{
+{
+platform
+}
+}
+.
+txt
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+{
+{
+locale
+}
+}
+/
+firefox
+-
+{
+{
+version
+}
+}
+.
+txt
+jsshell
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+jsshell
+-
+{
+{
+platform
+}
+}
+.
 zip
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+jsshell
+-
+{
+{
+platform
+}
+}
+.
+zip
+mozharness_package
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+mozharness
+.
+zip
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+{
+{
+locale
+}
+}
+/
+mozharness
+.
+zip
+xpi
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+firefox
+-
+{
+{
+app_version
+}
+}
+.
+{
+{
+locale
+}
+}
+.
+langpack
+.
+xpi
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+xpi
+/
+{
+{
+locale
+}
+}
+.
+xpi
 symbols
 :
 artifact
@@ -1240,7 +1030,7 @@ i686
 "
 %
 }
-package
+buildinfo
 :
 artifact
 :
@@ -1250,29 +1040,9 @@ artifact_base_url
 }
 }
 /
-firefox
--
-{
-{
-app_version
-}
-}
+target
 .
-{
-{
-locale
-}
-}
-.
-{
-{
-platform
-}
-}
-.
-tar
-.
-bz2
+json
 s3_key
 :
 {
@@ -1300,9 +1070,196 @@ version
 }
 }
 .
-tar
+json
+mozinfo
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+target
 .
-bz2
+mozinfo
+.
+json
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+{
+{
+locale
+}
+}
+/
+firefox
+-
+{
+{
+version
+}
+}
+.
+mozinfo
+.
+json
+socorroinfo
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+target
+.
+txt
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+{
+{
+locale
+}
+}
+/
+firefox
+-
+{
+{
+version
+}
+}
+.
+txt
+jsshell
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+target
+.
+jsshell
+.
+zip
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+jsshell
+-
+{
+{
+platform
+}
+}
+.
+zip
+mozharness_package
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+mozharness
+.
+zip
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+{
+{
+locale
+}
+}
+/
+mozharness
+.
+zip
+xpi
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+target
+.
+langpack
+.
+xpi
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+xpi
+/
+{
+{
+locale
+}
+}
+.
+xpi
 symbols
 :
 artifact
@@ -1313,25 +1270,7 @@ artifact_base_url
 }
 }
 /
-firefox
--
-{
-{
-app_version
-}
-}
-.
-{
-{
-locale
-}
-}
-.
-{
-{
-platform
-}
-}
+target
 .
 crashreporter
 -
@@ -1380,26 +1319,7 @@ artifact_base_url
 }
 }
 /
-firefox
--
-{
-{
-app_version
-}
-}
-.
-{
-{
-locale
-}
-}
-.
-{
-{
-platform
-}
-}
-_info
+target_info
 .
 txt
 s3_key
@@ -1421,6 +1341,10 @@ artifact
 artifact_base_url
 }
 }
+/
+host
+/
+bin
 /
 mar
 s3_key
@@ -1446,6 +1370,10 @@ artifact
 artifact_base_url
 }
 }
+/
+host
+/
+bin
 /
 mbsdiff
 s3_key
@@ -1480,7 +1408,7 @@ x86_64
 "
 %
 }
-package
+buildinfo
 :
 artifact
 :
@@ -1490,29 +1418,9 @@ artifact_base_url
 }
 }
 /
-firefox
--
-{
-{
-app_version
-}
-}
+target
 .
-{
-{
-locale
-}
-}
-.
-{
-{
-platform
-}
-}
-.
-tar
-.
-bz2
+json
 s3_key
 :
 {
@@ -1540,9 +1448,196 @@ version
 }
 }
 .
-tar
+json
+mozinfo
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+target
 .
-bz2
+mozinfo
+.
+json
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+{
+{
+locale
+}
+}
+/
+firefox
+-
+{
+{
+version
+}
+}
+.
+mozinfo
+.
+json
+socorroinfo
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+target
+.
+txt
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+{
+{
+locale
+}
+}
+/
+firefox
+-
+{
+{
+version
+}
+}
+.
+txt
+jsshell
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+target
+.
+jsshell
+.
+zip
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+jsshell
+-
+{
+{
+platform
+}
+}
+.
+zip
+mozharness_package
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+mozharness
+.
+zip
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+{
+{
+locale
+}
+}
+/
+mozharness
+.
+zip
+xpi
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+target
+.
+langpack
+.
+xpi
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+xpi
+/
+{
+{
+locale
+}
+}
+.
+xpi
 symbols
 :
 artifact
@@ -1553,25 +1648,7 @@ artifact_base_url
 }
 }
 /
-firefox
--
-{
-{
-app_version
-}
-}
-.
-{
-{
-locale
-}
-}
-.
-{
-{
-platform
-}
-}
+target
 .
 crashreporter
 -
@@ -1620,26 +1697,7 @@ artifact_base_url
 }
 }
 /
-firefox
--
-{
-{
-app_version
-}
-}
-.
-{
-{
-locale
-}
-}
-.
-{
-{
-platform
-}
-}
-_info
+target_info
 .
 txt
 s3_key
@@ -1661,6 +1719,10 @@ artifact
 artifact_base_url
 }
 }
+/
+host
+/
+bin
 /
 mar
 s3_key
@@ -1686,6 +1748,10 @@ artifact
 artifact_base_url
 }
 }
+/
+host
+/
+bin
 /
 mbsdiff
 s3_key
@@ -1718,7 +1784,7 @@ mac
 "
 %
 }
-package
+buildinfo
 :
 artifact
 :
@@ -1748,7 +1814,7 @@ platform
 }
 }
 .
-dmg
+json
 s3_key
 :
 {
@@ -1768,14 +1834,256 @@ locale
 }
 }
 /
-Firefox
+firefox
+-
 {
 {
 version
 }
 }
 .
-dmg
+json
+mozinfo
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+firefox
+-
+{
+{
+app_version
+}
+}
+.
+{
+{
+locale
+}
+}
+.
+{
+{
+platform
+}
+}
+.
+mozinfo
+.
+json
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+{
+{
+locale
+}
+}
+/
+firefox
+-
+{
+{
+version
+}
+}
+.
+mozinfo
+.
+json
+socorroinfo
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+firefox
+-
+{
+{
+app_version
+}
+}
+.
+{
+{
+locale
+}
+}
+.
+{
+{
+platform
+}
+}
+.
+txt
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+{
+{
+locale
+}
+}
+/
+firefox
+-
+{
+{
+version
+}
+}
+.
+txt
+jsshell
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+jsshell
+-
+{
+{
+platform
+}
+}
+.
+zip
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+jsshell
+-
+{
+{
+platform
+}
+}
+.
+zip
+mozharness_package
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+mozharness
+.
+zip
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+{
+{
+locale
+}
+}
+/
+mozharness
+.
+zip
+xpi
+:
+artifact
+:
+{
+{
+artifact_base_url
+}
+}
+/
+firefox
+-
+{
+{
+app_version
+}
+}
+.
+{
+{
+locale
+}
+}
+.
+langpack
+.
+xpi
+s3_key
+:
+{
+{
+s3_prefix
+}
+}
+{
+{
+platform
+}
+}
+/
+xpi
+/
+{
+{
+locale
+}
+}
+.
+xpi
 symbols
 :
 artifact
