Bug 1258360: Implement onMessageExternal and onConnectExternal. r=mixedpuppy
MozReview-Commit-ID: 7NTrgyWpXbv

UltraBlame original commit: 83e85e21d35404878a2e4bb9b26f66e8b817c99b

--- a/toolkit/components/extensions/test/mochitest/test_ext_sendmessage_reply2.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_sendmessage_reply2.html
@@ -171,8 +171,27 @@ function
 backgroundScript
 (
 token
+id
+otherId
 )
 {
+browser
+.
+tabs
+.
+create
+(
+{
+url
+:
+"
+tab
+.
+html
+"
+}
+)
+;
 browser
 .
 runtime
@@ -188,6 +207,39 @@ sendReply
 )
 =
 >
+{
+browser
+.
+test
+.
+assertEq
+(
+id
+sender
+.
+id
+{
+id
+}
+:
+Got
+expected
+sender
+ID
+)
+;
+if
+(
+msg
+=
+=
+=
+content
+-
+{
+token
+}
+)
 {
 browser
 .
@@ -209,37 +261,15 @@ file_sample
 html
 "
 )
-"
+{
+id
+}
+:
 sender
 url
 correct
-"
 )
 ;
-if
-(
-msg
-=
-=
-"
-done
-"
-)
-{
-browser
-.
-test
-.
-notifyPass
-(
-"
-sendmessage_reply
-"
-)
-;
-return
-;
-}
 let
 tabId
 =
@@ -260,21 +290,7 @@ tabId
 token
 }
 -
-tabMessage
-)
-;
-browser
-.
-test
-.
-assertEq
-(
-msg
-token
-"
-token
-matches
-"
+contentMessage
 )
 ;
 sendReply
@@ -287,6 +303,246 @@ done
 )
 ;
 }
+else
+if
+(
+msg
+=
+=
+=
+tab
+-
+{
+token
+}
+)
+{
+browser
+.
+runtime
+.
+sendMessage
+(
+otherId
+{
+otherId
+}
+-
+tabMessage
+)
+;
+browser
+.
+runtime
+.
+sendMessage
+(
+{
+token
+}
+-
+tabMessage
+)
+;
+sendReply
+(
+{
+token
+}
+-
+done
+)
+;
+}
+else
+{
+browser
+.
+test
+.
+fail
+(
+{
+id
+}
+:
+Unexpected
+runtime
+message
+received
+:
+{
+msg
+}
+{
+uneval
+(
+sender
+)
+}
+)
+;
+}
+}
+)
+;
+browser
+.
+runtime
+.
+onMessageExternal
+.
+addListener
+(
+(
+msg
+sender
+sendReply
+)
+=
+>
+{
+browser
+.
+test
+.
+assertEq
+(
+otherId
+sender
+.
+id
+{
+id
+}
+:
+Got
+expected
+external
+sender
+ID
+)
+;
+if
+(
+msg
+=
+=
+=
+content
+-
+{
+id
+}
+)
+{
+browser
+.
+test
+.
+assertTrue
+(
+sender
+.
+tab
+.
+url
+.
+endsWith
+(
+"
+file_sample
+.
+html
+"
+)
+{
+id
+}
+:
+external
+sender
+url
+correct
+)
+;
+sendReply
+(
+{
+otherId
+}
+-
+done
+)
+;
+}
+else
+if
+(
+msg
+=
+=
+=
+tab
+-
+{
+id
+}
+)
+{
+sendReply
+(
+{
+otherId
+}
+-
+done
+)
+;
+}
+else
+if
+(
+msg
+!
+=
+=
+{
+id
+}
+-
+tabMessage
+)
+{
+browser
+.
+test
+.
+fail
+(
+{
+id
+}
+:
+Unexpected
+runtime
+external
+message
+received
+:
+{
+msg
+}
+{
+uneval
+(
+sender
+)
+}
+)
+;
+}
+}
 )
 ;
 }
@@ -294,15 +550,12 @@ function
 contentScript
 (
 token
+id
+otherId
 )
 {
 let
-gotTabMessage
-=
-false
-;
-let
-badTabMessage
+gotContentMessage
 =
 false
 ;
@@ -322,9 +575,304 @@ sendReply
 =
 >
 {
+browser
+.
+test
+.
+assertEq
+(
+id
+sender
+.
+id
+{
+id
+}
+:
+Got
+expected
+sender
+ID
+)
+;
+browser
+.
+test
+.
+assertEq
+(
+{
+token
+}
+-
+contentMessage
+msg
+{
+id
+}
+:
+Correct
+content
+script
+message
+)
+;
 if
 (
 msg
+=
+=
+=
+{
+token
+}
+-
+contentMessage
+)
+{
+gotContentMessage
+=
+true
+;
+}
+}
+)
+;
+Promise
+.
+all
+(
+[
+browser
+.
+runtime
+.
+sendMessage
+(
+otherId
+content
+-
+{
+otherId
+}
+)
+.
+then
+(
+resp
+=
+>
+{
+browser
+.
+test
+.
+assertEq
+(
+{
+id
+}
+-
+done
+resp
+{
+id
+}
+:
+Correct
+content
+script
+external
+response
+token
+)
+;
+}
+)
+browser
+.
+runtime
+.
+sendMessage
+(
+content
+-
+{
+token
+}
+)
+.
+then
+(
+resp
+=
+>
+{
+browser
+.
+test
+.
+assertEq
+(
+{
+token
+}
+-
+done
+resp
+{
+id
+}
+:
+Correct
+content
+script
+response
+token
+)
+;
+}
+)
+]
+)
+.
+then
+(
+(
+)
+=
+>
+{
+browser
+.
+test
+.
+assertTrue
+(
+gotContentMessage
+{
+id
+}
+:
+Got
+content
+script
+message
+)
+;
+browser
+.
+test
+.
+sendMessage
+(
+"
+content
+-
+script
+-
+done
+"
+)
+;
+}
+)
+;
+}
+function
+tabScript
+(
+token
+id
+otherId
+)
+{
+let
+gotTabMessage
+=
+false
+;
+browser
+.
+runtime
+.
+onMessage
+.
+addListener
+(
+(
+msg
+sender
+sendReply
+)
+=
+>
+{
+browser
+.
+test
+.
+assertEq
+(
+id
+sender
+.
+id
+{
+id
+}
+:
+Got
+expected
+sender
+ID
+)
+;
+if
+(
+String
+(
+msg
+)
+.
+startsWith
+(
+"
+content
+-
+"
+)
+)
+{
+return
+;
+}
+browser
+.
+test
+.
+assertEq
+(
+{
+token
+}
+-
+tabMessage
+msg
+{
+id
+}
+:
+Correct
+tab
+script
+message
+)
+;
+if
+(
+msg
+=
 =
 =
 {
@@ -339,61 +887,148 @@ gotTabMessage
 true
 ;
 }
-else
-{
-badTabMessage
-=
-true
-;
-}
 }
 )
 ;
+Promise
+.
+all
+(
+[
 browser
 .
 runtime
 .
 sendMessage
 (
-token
-function
-(
-resp
-)
+otherId
+tab
+-
 {
-if
+otherId
+}
+)
+.
+then
 (
 resp
-!
 =
+>
+{
+browser
+.
+test
+.
+assertEq
+(
+{
+id
+}
+-
+done
+resp
+{
+id
+}
+:
+Correct
+tab
+script
+external
+response
+token
+)
+;
+}
+)
+browser
+.
+runtime
+.
+sendMessage
+(
+tab
+-
+{
+token
+}
+)
+.
+then
+(
+resp
+=
+>
+{
+browser
+.
+test
+.
+assertEq
+(
 {
 token
 }
 -
 done
-|
-|
-!
-gotTabMessage
-|
-|
-badTabMessage
-)
+resp
 {
-return
-;
-/
-/
-test
-failed
+id
 }
+:
+Correct
+tab
+script
+response
+token
+)
+;
+}
+)
+]
+)
+.
+then
+(
+(
+)
+=
+>
+{
 browser
 .
-runtime
+test
+.
+assertTrue
+(
+gotTabMessage
+{
+id
+}
+:
+Got
+tab
+script
+message
+)
+;
+window
+.
+close
+(
+)
+;
+browser
+.
+test
 .
 sendMessage
 (
 "
+tab
+-
+script
+-
 done
 "
 )
@@ -405,6 +1040,8 @@ done
 function
 makeExtension
 (
+id
+otherId
 )
 {
 let
@@ -415,6 +1052,29 @@ Math
 random
 (
 )
+;
+let
+args
+=
+{
+token
+}
+{
+JSON
+.
+stringify
+(
+id
+)
+}
+{
+JSON
+.
+stringify
+(
+otherId
+)
+}
 ;
 let
 extensionData
@@ -429,12 +1089,25 @@ backgroundScript
 )
 (
 {
-token
+args
 }
 )
 manifest
 :
 {
+"
+applications
+"
+:
+{
+"
+gecko
+"
+:
+{
+id
+}
+}
 "
 permissions
 "
@@ -496,6 +1169,72 @@ files
 :
 {
 "
+tab
+.
+html
+"
+:
+<
+!
+DOCTYPE
+html
+>
+<
+html
+>
+<
+head
+>
+<
+meta
+charset
+=
+"
+utf
+-
+8
+"
+>
+<
+script
+src
+=
+"
+tab
+.
+js
+"
+>
+<
+\
+/
+script
+>
+<
+/
+head
+>
+<
+/
+html
+>
+"
+tab
+.
+js
+"
+:
+(
+{
+tabScript
+}
+)
+(
+{
+args
+}
+)
+"
 content_script
 .
 js
@@ -508,7 +1247,7 @@ contentScript
 )
 (
 {
-token
+args
 }
 )
 }
@@ -526,6 +1265,30 @@ test_contentscript
 (
 )
 {
+const
+ID1
+=
+"
+sendmessage1
+mochitest
+.
+mozilla
+.
+org
+"
+;
+const
+ID2
+=
+"
+sendmessage2
+mochitest
+.
+mozilla
+.
+org
+"
+;
 let
 extension1
 =
@@ -535,6 +1298,8 @@ loadExtension
 (
 makeExtension
 (
+ID1
+ID2
 )
 )
 ;
@@ -547,6 +1312,8 @@ loadExtension
 (
 makeExtension
 (
+ID2
+ID1
 )
 )
 ;
@@ -584,29 +1351,63 @@ html
 )
 ;
 yield
+waitForLoad
+(
+win
+)
+;
+yield
 Promise
 .
 all
 (
 [
-waitForLoad
-(
-win
-)
 extension1
 .
-awaitFinish
+awaitMessage
 (
 "
-sendmessage_reply
+content
+-
+script
+-
+done
 "
 )
 extension2
 .
-awaitFinish
+awaitMessage
 (
 "
-sendmessage_reply
+content
+-
+script
+-
+done
+"
+)
+extension1
+.
+awaitMessage
+(
+"
+tab
+-
+script
+-
+done
+"
+)
+extension2
+.
+awaitMessage
+(
+"
+tab
+-
+script
+-
+done
 "
 )
 ]
@@ -630,14 +1431,6 @@ extension2
 .
 unload
 (
-)
-;
-info
-(
-"
-extensions
-unloaded
-"
 )
 ;
 }
