Bug 1317047 followup, make the table cells smaller to avoid horizontal compression of columns. r=manishearth
UltraBlame original commit: 1402d02dd61e0f69c00da5a765d6083a627d35eb

--- a/layout/reftests/w3c-css/submitted/writing-modes-3/logical-physical-mapping-001.html
+++ b/layout/reftests/w3c-css/submitted/writing-modes-3/logical-physical-mapping-001.html
@@ -428,27 +428,27 @@ td
 {
 padding
 :
-10px
+5px
 ;
 font
 -
 size
 :
-15px
+13px
 ;
 background
 -
 color
 :
-grey
+silver
 ;
 width
 :
-80px
+70px
 ;
 height
 :
-80px
+70px
 ;
 }
 .
