Bug 1341045 - Remove broken CSS overrides from responsive.html. r=jryans
MozReview-Commit-ID: KCb8G3agjE4

UltraBlame original commit: f67c47f25e6c8056bf22199d6d0596377526b7fa

--- a/devtools/client/responsive.html/index.css
+++ b/devtools/client/responsive.html/index.css
@@ -563,21 +563,61 @@ button
 {
 margin
 :
-1px
-3px
+0
 ;
-width
+padding
 :
-16px
+0
 ;
-height
+border
 :
-16px
+none
 ;
+}
+.
+toolbar
+-
+button
+:
+empty
+:
+hover
+:
+not
+(
+:
+disabled
+)
+.
+toolbar
+-
+button
+:
+empty
+:
+-
+moz
+-
+any
+(
+:
+hover
+:
+active
+.
+checked
+)
+:
+not
+(
+:
+disabled
+)
+{
 /
 *
 Reset
-styles
+background
 from
 .
 devtools
@@ -585,23 +625,9 @@ devtools
 button
 *
 /
-min
--
-width
+background
 :
-initial
-;
-min
--
-height
-:
-initial
-;
-align
--
-self
-:
-center
+none
 ;
 }
 .
@@ -613,32 +639,27 @@ active
 :
 :
 before
+.
+toolbar
+-
+button
+.
+active
+:
+:
+before
 {
 filter
 :
-url
+var
 (
-"
-chrome
-:
-/
-/
-devtools
-/
-skin
-/
-images
-/
-filters
-.
-svg
-#
+-
+-
 checked
 -
 icon
 -
-state
-"
+filter
 )
 ;
 }
@@ -1098,35 +1119,7 @@ padding
 global
 -
 toolbar
-.
-toolbar
--
-button
-{
-margin
-:
-0
-0
-0
-5px
-;
-padding
-:
-0
-;
-}
-#
-global
--
-toolbar
-.
-toolbar
--
-button
-#
-global
--
-toolbar
+>
 .
 toolbar
 -
@@ -1175,57 +1168,6 @@ svg
 "
 )
 ;
-margin
-:
--
-6px
-0
-0
--
-6px
-;
-}
-#
-global
--
-touch
--
-simulation
--
-button
-.
-active
-:
-:
-before
-{
-filter
-:
-url
-(
-"
-chrome
-:
-/
-/
-devtools
-/
-skin
-/
-images
-/
-filters
-.
-svg
-#
-checked
--
-icon
--
-state
-"
-)
-;
 }
 #
 global
@@ -1253,15 +1195,6 @@ screenshot
 svg
 "
 )
-;
-margin
-:
--
-6px
-0
-0
--
-6px
 ;
 }
 #
@@ -1291,15 +1224,6 @@ svg
 "
 )
 ;
-margin
-:
--
-6px
-0
-0
--
-6px
-;
 }
 #
 global
@@ -1312,29 +1236,15 @@ disabled
 {
 filter
 :
-url
+var
 (
-"
-chrome
-:
-/
-/
-devtools
-/
-skin
-/
-images
-/
-filters
-.
-svg
-#
+-
+-
 checked
 -
 icon
 -
-state
-"
+filter
 )
 ;
 opacity
@@ -1800,7 +1710,7 @@ center
 ;
 height
 :
-18px
+16px
 ;
 }
 .
@@ -2881,6 +2791,8 @@ remove
 -
 button
 :
+empty
+:
 :
 before
 {
@@ -2899,6 +2811,8 @@ device
 remove
 -
 button
+:
+empty
 :
 :
 before
