Bug 1341045 - Make sure RDM close icon is centered within button. r=jryans
MozReview-Commit-ID: 5nlucwAe51L

UltraBlame original commit: cb3ac86ceeb80e0a5098f10d78711522a55b29bb

--- a/devtools/client/responsive.html/index.css
+++ b/devtools/client/responsive.html/index.css
@@ -1205,7 +1205,13 @@ image
 url
 (
 "
-.
+chrome
+:
+/
+/
+devtools
+/
+skin
 /
 images
 /
@@ -2643,7 +2649,13 @@ image
 url
 (
 "
-.
+chrome
+:
+/
+/
+devtools
+/
+skin
 /
 images
 /
@@ -2815,7 +2827,13 @@ image
 url
 (
 "
-.
+chrome
+:
+/
+/
+devtools
+/
+skin
 /
 images
 /
