--- a/browser/base/content/tabbrowser.css
+++ b/browser/base/content/tabbrowser.css
@@ -767,12 +767,31 @@ none
 }
 browser
 [
+pendingtabchild
+]
+browser
+[
 pendingpaint
 ]
 {
 opacity
 :
 0
+;
+}
+tabbrowser
+[
+pendingtabchild
+]
+{
+background
+-
+color
+:
+#
+ffffff
+!
+important
 ;
 }
 tabbrowser
