Bug 1344307 - Clean up lightweight theme footer handling. r=jaws
MozReview-Commit-ID: BIUszE69HhH

UltraBlame original commit: e5b4f79727c81b0fc784f3c781d70af4fb376a35

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -3296,17 +3296,22 @@ true
 }
 %
 endif
+:
+root
+[
+lwthemefooter
+=
+true
+]
 #
 browser
 -
 bottombox
-[
-lwthemefooter
-=
-"
-true
-"
-]
+:
+-
+moz
+-
+lwtheme
 {
 background
 -
@@ -3348,7 +3353,7 @@ var
 -
 lwt
 -
-header
+footer
 -
 image
 )
