--- a/toolkit/components/extensions/test/mochitest/test_ext_webnavigation_filters.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_webnavigation_filters.html
@@ -169,27 +169,6 @@ use
 strict
 "
 ;
-if
-(
-AppConstants
-.
-platform
-=
-=
-=
-"
-android
-"
-)
-{
-SimpleTest
-.
-requestLongerTimeout
-(
-6
-)
-;
-}
 add_task
 (
 function
@@ -204,31 +183,16 @@ background
 )
 {
 let
-lastTest
+listeners
+=
+[
+]
 ;
 function
 cleanupTestListeners
 (
 )
 {
-if
-(
-lastTest
-)
-{
-let
-{
-event
-okListener
-failListener
-}
-=
-lastTest
-;
-lastTest
-=
-null
-;
 browser
 .
 test
@@ -242,18 +206,22 @@ event
 listeners
 )
 ;
-browser
-.
-webNavigation
-[
-event
-]
-.
-removeListener
+for
 (
-okListener
+let
+{
+event
+listener
+}
+of
+listeners
+.
+splice
+(
+0
 )
-;
+)
+{
 browser
 .
 webNavigation
@@ -263,7 +231,7 @@ event
 .
 removeListener
 (
-failListener
+listener
 )
 ;
 }
@@ -275,6 +243,14 @@ event
 fail
 urlFilter
 )
+{
+return
+new
+Promise
+(
+resolve
+=
+>
 {
 function
 listener
@@ -352,6 +328,171 @@ log
 )
 ;
 }
+resolve
+(
+)
+;
+}
+browser
+.
+webNavigation
+[
+event
+]
+.
+addListener
+(
+listener
+{
+url
+:
+urlFilter
+}
+)
+;
+listeners
+.
+push
+(
+{
+event
+listener
+}
+)
+;
+}
+)
+;
+}
+browser
+.
+test
+.
+onMessage
+.
+addListener
+(
+(
+msg
+events
+data
+)
+=
+>
+{
+if
+(
+msg
+!
+=
+=
+"
+test
+-
+filters
+"
+)
+{
+return
+;
+}
+let
+promises
+=
+[
+]
+;
+for
+(
+let
+{
+okFilter
+failFilter
+}
+of
+data
+.
+filters
+)
+{
+for
+(
+let
+event
+of
+events
+)
+{
+promises
+.
+push
+(
+Promise
+.
+race
+(
+[
+createTestListener
+(
+event
+false
+okFilter
+)
+createTestListener
+(
+event
+true
+failFilter
+)
+]
+)
+)
+;
+}
+}
+Promise
+.
+all
+(
+promises
+)
+.
+catch
+(
+e
+=
+>
+{
+browser
+.
+test
+.
+fail
+(
+Error
+:
+{
+e
+}
+:
+:
+{
+e
+.
+stack
+}
+)
+;
+}
+)
+.
+then
+(
+(
+)
+=
+>
+{
 cleanupTestListeners
 (
 )
@@ -372,104 +513,7 @@ next
 )
 ;
 }
-browser
-.
-webNavigation
-[
-event
-]
-.
-addListener
-(
-listener
-urlFilter
 )
-;
-return
-listener
-;
-}
-browser
-.
-test
-.
-onMessage
-.
-addListener
-(
-(
-msg
-event
-okFilter
-failFilter
-)
-=
->
-{
-if
-(
-msg
-!
-=
-=
-"
-test
--
-filter
-"
-)
-{
-return
-;
-}
-lastTest
-=
-{
-event
-/
-/
-Register
-the
-failListener
-first
-which
-should
-not
-be
-called
-/
-/
-and
-if
-it
-is
-called
-the
-test
-scenario
-is
-marked
-as
-a
-failure
-.
-failListener
-:
-createTestListener
-(
-event
-true
-failFilter
-)
-okListener
-:
-createTestListener
-(
-event
-false
-okFilter
-)
-}
 ;
 browser
 .
@@ -487,17 +531,6 @@ ready
 )
 ;
 }
-)
-;
-browser
-.
-test
-.
-sendMessage
-(
-"
-ready
-"
 )
 ;
 }
@@ -534,16 +567,6 @@ extension
 .
 startup
 (
-)
-;
-yield
-extension
-.
-awaitMessage
-(
-"
-ready
-"
 )
 ;
 let
@@ -668,6 +691,145 @@ ports
 81
 100
 ]
+]
+}
+]
+}
+/
+/
+multiple
+criteria
+in
+a
+single
+filter
+:
+/
+/
+if
+one
+of
+the
+critera
+is
+not
+verified
+the
+event
+should
+not
+be
+received
+.
+{
+okFilter
+:
+[
+{
+schemes
+:
+[
+"
+http
+"
+]
+ports
+:
+[
+80
+22
+443
+]
+}
+]
+failFilter
+:
+[
+{
+schemes
+:
+[
+"
+http
+"
+]
+ports
+:
+[
+81
+82
+83
+]
+}
+]
+}
+/
+/
+multiple
+urlFilters
+on
+the
+same
+listener
+/
+/
+if
+at
+least
+one
+of
+the
+critera
+is
+verified
+the
+event
+should
+be
+received
+.
+{
+okFilter
+:
+[
+{
+schemes
+:
+[
+"
+https
+"
+]
+}
+{
+ports
+:
+[
+80
+22
+443
+]
+}
+]
+failFilter
+:
+[
+{
+schemes
+:
+[
+"
+https
+"
+]
+}
+{
+ports
+:
+[
+81
+82
+83
 ]
 }
 ]
@@ -1114,193 +1276,49 @@ param
 }
 ]
 }
-{
-url
-:
-"
-http
-:
-/
-/
-example
-.
-net
-/
-browser
-"
-filters
-:
-[
-/
-/
-multiple
-criteria
-in
-a
-single
-filter
-:
-/
-/
-if
-one
-of
-the
-critera
-is
-not
-verified
-the
-event
-should
-not
-be
-received
-.
-{
-okFilter
-:
-[
-{
-schemes
-:
-[
-"
-http
-"
-]
-ports
-:
-[
-80
-22
-443
-]
-}
-]
-failFilter
-:
-[
-{
-schemes
-:
-[
-"
-http
-"
-]
-ports
-:
-[
-81
-82
-83
-]
-}
-]
-}
-/
-/
-multiple
-urlFilters
-on
-the
-same
-listener
-/
-/
-if
-at
-least
-one
-of
-the
-critera
-is
-verified
-the
-event
-should
-be
-received
-.
-{
-okFilter
-:
-[
-{
-schemes
-:
-[
-"
-https
-"
-]
-}
-{
-ports
-:
-[
-80
-22
-443
-]
-}
-]
-failFilter
-:
-[
-{
-schemes
-:
-[
-"
-https
-"
-]
-}
-{
-ports
-:
-[
-81
-82
-83
-]
-}
-]
-}
-]
-}
 ]
 ;
-function
-*
-runTestScenario
+info
 (
+"
+WebNavigation
 event
-{
-url
 filters
-}
+test
+scenarios
+starting
+.
+.
+.
+"
 )
-{
+;
+const
+EVENTS
+=
+[
+"
+onBeforeNavigate
+"
+"
+onCommitted
+"
+"
+onDOMContentLoaded
+"
+"
+onCompleted
+"
+]
+;
 for
 (
 let
-testFilters
+data
 of
-filters
+testFilterScenarios
 )
 {
-let
-{
-okFilter
-failFilter
-}
-=
-testFilters
-;
 info
 (
 Prepare
@@ -1310,17 +1328,11 @@ test
 scenario
 :
 {
-event
-}
-{
-url
-}
-{
 JSON
 .
 stringify
 (
-testFilters
+data
 )
 }
 )
@@ -1342,19 +1354,10 @@ sendMessage
 "
 test
 -
-filter
+filters
 "
-event
-{
-url
-:
-okFilter
-}
-{
-url
-:
-failFilter
-}
+EVENTS
+data
 )
 ;
 yield
@@ -1379,6 +1382,8 @@ test
 url
 :
 {
+data
+.
 url
 }
 )
@@ -1387,6 +1392,8 @@ win
 .
 location
 =
+data
+.
 url
 ;
 yield
@@ -1420,65 +1427,6 @@ scenario
 "
 )
 ;
-}
-}
-const
-BASE_WEBNAV_EVENTS
-=
-[
-"
-onBeforeNavigate
-"
-"
-onCommitted
-"
-"
-onDOMContentLoaded
-"
-"
-onCompleted
-"
-]
-;
-info
-(
-"
-WebNavigation
-event
-filters
-test
-scenarios
-starting
-.
-.
-.
-"
-)
-;
-for
-(
-let
-filterScenario
-of
-testFilterScenarios
-)
-{
-for
-(
-let
-event
-of
-BASE_WEBNAV_EVENTS
-)
-{
-yield
-runTestScenario
-(
-event
-filterScenario
-)
-;
-}
 }
 info
 (
@@ -1564,6 +1512,20 @@ ports
 ]
 ;
 let
+data
+=
+{
+filters
+:
+[
+{
+okFilter
+failFilter
+}
+]
+}
+;
+let
 event
 =
 "
@@ -1590,19 +1552,12 @@ sendMessage
 "
 test
 -
-filter
+filters
 "
+[
 event
-{
-url
-:
-okFilter
-}
-{
-url
-:
-failFilter
-}
+]
+data
 )
 ;
 yield
@@ -1652,19 +1607,12 @@ sendMessage
 "
 test
 -
-filter
+filters
 "
+[
 event
-{
-url
-:
-okFilter
-}
-{
-url
-:
-failFilter
-}
+]
+data
 )
 ;
 yield
@@ -1735,19 +1683,12 @@ sendMessage
 "
 test
 -
-filter
+filters
 "
+[
 event
-{
-url
-:
-okFilter
-}
-{
-url
-:
-failFilter
-}
+]
+data
 )
 ;
 yield
