Bug 1344089: Fix test_ext_webrequest_filter Android failures on infra. r=mixedpuppy
MozReview-Commit-ID: 6WAeiOE03Uk

UltraBlame original commit: 34ec74d66e98d041f280e14bdcf2047ad7a1e366

--- a/toolkit/components/extensions/test/mochitest/test_ext_webrequest_filter.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_webrequest_filter.html
@@ -987,6 +987,23 @@ true
 )
 ;
 let
+img
+=
+file_image_good
+.
+png
+?
+r
+=
+{
+Math
+.
+random
+(
+)
+}
+;
+let
 events
 =
 {
@@ -1313,11 +1330,7 @@ window
 .
 open
 (
-"
-file_image_good
-.
-png
-"
+img
 "
 _blank
 "
@@ -1393,11 +1406,7 @@ testWindow
 .
 location
 =
-"
-file_image_good
-.
-png
-"
+img
 ;
 yield
 extension
