Bug 1344294 - Bump Debugger 3/3/2017. r=gtatum
UltraBlame original commit: 1f2df690050b0a553ae716f273d15fb2b6d45334

--- a/devtools/client/debugger/new/debugger.css
+++ b/devtools/client/debugger/new/debugger.css
@@ -5860,6 +5860,70 @@ opacity
 7
 ;
 }
+:
+root
+.
+theme
+-
+light
+:
+root
+.
+theme
+-
+light
+{
+-
+-
+search
+-
+overlays
+-
+semitransparent
+:
+rgba
+(
+221
+225
+228
+0
+.
+66
+)
+;
+}
+:
+root
+.
+theme
+-
+dark
+:
+root
+.
+theme
+-
+dark
+{
+-
+-
+search
+-
+overlays
+-
+semitransparent
+:
+rgba
+(
+42
+46
+56
+0
+.
+66
+)
+;
+}
 .
 debugger
 {
@@ -5991,8 +6055,6 @@ color
 var
 (
 -
--
-theme
 -
 search
 -
@@ -8469,6 +8531,32 @@ color
 ;
 }
 .
+theme
+-
+dark
+.
+result
+-
+list
+li
+.
+subtitle
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+comment
+-
+alt
+)
+;
+}
+.
 arrow
 .
 folder
@@ -9064,6 +9152,12 @@ display
 :
 flex
 ;
+flex
+-
+shrink
+:
+0
+;
 }
 .
 search
@@ -9142,6 +9236,8 @@ var
 theme
 -
 comment
+-
+alt
 )
 ;
 width
@@ -9157,6 +9253,30 @@ calc
 flex
 :
 1
+;
+}
+.
+theme
+-
+dark
+.
+search
+-
+field
+input
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+comment
+-
+alt
+)
 ;
 }
 .
@@ -9234,11 +9354,9 @@ var
 -
 theme
 -
-body
+comment
 -
-color
--
-inactive
+alt
 )
 ;
 }
@@ -10000,6 +10118,33 @@ end
 ;
 }
 .
+theme
+-
+dark
+.
+sources
+-
+header
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+tab
+-
+toolbar
+-
+background
+)
+;
+}
+.
 sources
 -
 header
@@ -10185,6 +10330,43 @@ var
 theme
 -
 comment
+)
+;
+}
+.
+theme
+-
+dark
+.
+toggle
+-
+button
+-
+start
+svg
+.
+theme
+-
+dark
+.
+toggle
+-
+button
+-
+end
+svg
+{
+fill
+:
+var
+(
+-
+-
+theme
+-
+comment
+-
+alt
 )
 ;
 }
@@ -10692,6 +10874,30 @@ search
 bottom
 -
 bar
+*
+{
+-
+moz
+-
+user
+-
+select
+:
+none
+;
+user
+-
+select
+:
+none
+;
+}
+.
+search
+-
+bottom
+-
+bar
 {
 display
 :
@@ -10761,6 +10967,21 @@ padding
 :
 0
 13px
+;
+}
+.
+search
+-
+bottom
+-
+bar
+button
+:
+focus
+{
+outline
+:
+none
 ;
 }
 .
@@ -10890,7 +11111,17 @@ var
 theme
 -
 comment
+-
+alt
 )
+;
+height
+:
+16px
+;
+width
+:
+16px
 ;
 }
 .
@@ -10904,23 +11135,32 @@ search
 -
 modifiers
 button
+svg
+:
+hover
+{
+cursor
+:
+pointer
+;
+}
 .
+search
+-
+bottom
+-
+bar
+.
+search
+-
+modifiers
+button
+:
 active
 {
-background
--
-color
+outline
 :
-var
-(
--
--
-theme
--
-selection
--
-background
-)
+none
 ;
 }
 .
@@ -10940,7 +11180,69 @@ svg
 {
 fill
 :
+var
+(
+-
+-
+theme
+-
+selection
+-
+background
+)
+;
+}
+.
+theme
+-
+dark
+.
+search
+-
+bottom
+-
+bar
+.
+search
+-
+modifiers
+button
+.
+active
+svg
+{
+fill
+:
 white
+;
+}
+.
+search
+-
+bottom
+-
+bar
+.
+search
+-
+modifiers
+button
+.
+disabled
+svg
+{
+fill
+:
+var
+(
+-
+-
+theme
+-
+comment
+-
+alt
+)
 ;
 }
 .
@@ -10979,7 +11281,12 @@ search
 type
 -
 toggles
-h1
+.
+search
+-
+toggle
+-
+title
 {
 color
 :
@@ -10990,6 +11297,8 @@ var
 theme
 -
 comment
+-
+alt
 )
 ;
 font
@@ -11067,6 +11376,58 @@ search
 type
 -
 btn
+:
+hover
+{
+cursor
+:
+pointer
+;
+}
+.
+search
+-
+bottom
+-
+bar
+.
+search
+-
+type
+-
+toggles
+.
+search
+-
+type
+-
+btn
+:
+active
+{
+outline
+:
+none
+;
+}
+.
+search
+-
+bottom
+-
+bar
+.
+search
+-
+type
+-
+toggles
+.
+search
+-
+type
+-
+btn
 .
 active
 {
@@ -11083,11 +11444,35 @@ selection
 background
 )
 ;
-font
+}
+.
+theme
 -
-weight
+dark
+.
+search
+-
+bottom
+-
+bar
+.
+search
+-
+type
+-
+toggles
+.
+search
+-
+type
+-
+btn
+.
+active
+{
+color
 :
-bold
+white
 ;
 }
 .
@@ -11110,6 +11495,104 @@ calc
 -
 80px
 )
+;
+border
+-
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+background
+)
+;
+}
+.
+search
+-
+bar
+.
+result
+-
+list
+li
+{
+border
+:
+none
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
+;
+border
+-
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+padding
+:
+4px
+13px
+;
+margin
+:
+0
+;
+display
+:
+flex
+;
+justify
+-
+content
+:
+space
+-
+between
 ;
 }
 .
@@ -11142,84 +11625,16 @@ result
 -
 list
 li
+:
+last
+-
+child
 {
-border
-:
-none
-;
-color
-:
-var
-(
--
--
-theme
--
-comment
-)
-;
-border
--
-top
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
 border
 -
 bottom
 :
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
-background
--
-color
-:
-var
-(
--
--
-theme
--
-tab
--
-toolbar
--
-background
-)
-;
-padding
-:
-4px
-;
-margin
-:
-0
-;
-display
-:
-flex
+none
 ;
 }
 .
@@ -11233,33 +11648,7 @@ list
 li
 .
 selected
-.
-search
--
-bar
-.
-result
--
-list
-li
-.
-selected
-.
-subtitle
 {
-color
-:
-var
-(
--
--
-theme
--
-body
--
-background
-)
-;
 background
 -
 color
@@ -11275,37 +11664,9 @@ selection
 background
 )
 ;
-}
-.
-search
--
-bar
-.
-result
--
-list
-li
-.
-title
-{
-font
--
-weight
+color
 :
-bold
-;
-flex
--
-grow
-:
-2
-;
-flex
--
-basis
-:
-95
-%
+white
 ;
 }
 .
@@ -11326,18 +11687,49 @@ weight
 :
 lighter
 ;
-flex
+}
+.
+search
 -
-grow
+bar
+.
+result
+-
+list
+li
+.
+selected
+.
+subtitle
+{
+color
 :
-1
+white
 ;
-flex
+}
+.
+theme
 -
-basis
+dark
+.
+result
+-
+list
+{
+background
+-
+color
 :
-5
-%
+var
+(
+-
+-
+theme
+-
+body
+-
+background
+)
 ;
 }
 .
@@ -11345,17 +11737,158 @@ popover
 {
 position
 :
-absolute
-;
-background
-:
-white
+fixed
 ;
 z
 -
 index
 :
 4
+;
+}
+.
+popover
+-
+gap
+{
+height
+:
+10px
+;
+padding
+-
+top
+:
+10px
+;
+}
+.
+popover
+:
+:
+before
+.
+popover
+:
+:
+after
+{
+content
+:
+'
+'
+;
+height
+:
+0
+;
+width
+:
+0
+;
+position
+:
+absolute
+;
+border
+:
+10px
+solid
+transparent
+;
+left
+:
+calc
+(
+20
+%
+-
+10px
+)
+;
+/
+*
+corresponds
+to
+calculation
+in
+Popover
+.
+js
+*
+/
+}
+.
+popover
+:
+:
+before
+{
+border
+-
+bottom
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+comment
+)
+;
+top
+:
+-
+10px
+;
+}
+.
+popover
+:
+:
+after
+{
+border
+-
+bottom
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+background
+)
+;
+top
+:
+-
+8px
+;
+}
+.
+preview
+{
+background
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+background
+)
 ;
 min
 -
@@ -11373,8 +11906,14 @@ border
 :
 1px
 solid
-#
-cccccc
+var
+(
+-
+-
+theme
+-
+comment
+)
 ;
 padding
 :
@@ -11398,13 +11937,303 @@ height
 ;
 overflow
 :
-scroll
+auto
 ;
 max
 -
 width
 :
 400px
+;
+}
+.
+preview
+.
+header
+{
+width
+:
+100
+%
+;
+line
+-
+height
+:
+20px
+;
+border
+-
+bottom
+:
+1px
+solid
+#
+cccccc
+;
+display
+:
+flex
+;
+flex
+-
+direction
+:
+column
+;
+}
+.
+preview
+.
+header
+.
+link
+{
+align
+-
+self
+:
+flex
+-
+end
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+blue
+)
+;
+text
+-
+decoration
+:
+underline
+;
+}
+.
+preview
+.
+header
+.
+link
+:
+hover
+{
+cursor
+:
+pointer
+;
+}
+.
+selected
+-
+token
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+search
+-
+overlays
+-
+semitransparent
+)
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
+)
+;
+}
+.
+selected
+-
+token
+:
+hover
+{
+cursor
+:
+pointer
+;
+}
+.
+preview
+.
+function
+-
+signature
+{
+padding
+-
+top
+:
+10px
+;
+}
+.
+function
+-
+signature
+{
+line
+-
+height
+:
+20px
+;
+align
+-
+self
+:
+center
+;
+}
+.
+function
+-
+signature
+.
+function
+-
+name
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+blue
+)
+;
+}
+.
+function
+-
+signature
+.
+param
+{
+color
+:
+var
+(
+-
+-
+string
+-
+color
+)
+;
+}
+.
+function
+-
+signature
+.
+paren
+{
+color
+:
+var
+(
+-
+-
+object
+-
+color
+)
+;
+}
+.
+function
+-
+signature
+.
+comma
+{
+color
+:
+var
+(
+-
+-
+object
+-
+color
+)
+;
+}
+.
+theme
+-
+dark
+.
+preview
+{
+border
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
+;
+}
+.
+theme
+-
+dark
+.
+preview
+.
+arrow
+svg
+{
+fill
+:
+var
+(
+-
+-
+theme
+-
+comment
+)
 ;
 }
 .
@@ -11510,9 +12339,9 @@ var
 -
 theme
 -
-highlight
+comment
 -
-blue
+alt
 )
 ;
 padding
@@ -12148,6 +12977,37 @@ height
 ;
 }
 .
+theme
+-
+dark
+.
+editor
+-
+wrapper
+.
+CodeMirror
+-
+line
+.
+cm
+-
+comment
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+content
+-
+color3
+)
+;
+}
+.
 debug
 -
 line
@@ -12624,6 +13484,10 @@ display
 :
 flex
 ;
+position
+:
+relative
+;
 }
 .
 expression
@@ -12695,8 +13559,6 @@ var
 (
 -
 -
-theme
--
 search
 -
 overlays
@@ -12714,30 +13576,33 @@ close
 -
 btn
 {
+position
+:
+absolute
+;
+offset
+-
+inline
+-
+end
+:
+6px
+;
+top
+:
+6px
+;
+}
+.
+expression
+-
+container
+.
+close
+{
 display
 :
 none
-;
-cursor
-:
-pointer
-;
-width
-:
-20px
-;
-height
-:
-20px
-;
-padding
-:
-0
-4px
-;
-margin
-:
-0
 ;
 }
 .
@@ -12748,12 +13613,10 @@ container
 hover
 .
 close
--
-btn
 {
 display
 :
-flex
+block
 ;
 }
 .
@@ -13267,8 +14130,6 @@ color
 var
 (
 -
--
-theme
 -
 search
 -
@@ -14074,8 +14935,6 @@ var
 (
 -
 -
-theme
--
 search
 -
 overlays
@@ -14459,8 +15318,6 @@ var
 (
 -
 -
-theme
--
 search
 -
 overlays
@@ -14700,6 +15557,16 @@ index
 :
 1
 ;
+}
+.
+theme
+-
+dark
+.
+command
+-
+bar
+{
 background
 -
 color
@@ -14710,7 +15577,9 @@ var
 -
 theme
 -
-body
+tab
+-
+toolbar
 -
 background
 )
@@ -15279,6 +16148,12 @@ auto
 .
 dropdown
 {
+-
+-
+width
+:
+150px
+;
 background
 :
 var
@@ -15319,8 +16194,6 @@ var
 (
 -
 -
-theme
--
 search
 -
 overlays
@@ -15338,11 +16211,7 @@ position
 :
 absolute
 ;
-offset
--
-inline
--
-end
+right
 :
 8px
 ;
@@ -15352,13 +16221,51 @@ top
 ;
 width
 :
-150px
+var
+(
+-
+-
+width
+)
 ;
 z
 -
 index
 :
 1000
+;
+}
+html
+[
+dir
+=
+"
+rtl
+"
+]
+.
+dropdown
+{
+right
+:
+calc
+(
+(
+var
+(
+-
+-
+width
+)
+-
+11px
+)
+*
+(
+-
+1
+)
+)
 ;
 }
 .
@@ -15487,8 +16394,6 @@ var
 (
 -
 -
-theme
--
 search
 -
 overlays
@@ -15604,14 +16509,6 @@ height
 display
 :
 flex
-;
-justify
--
-content
-:
-space
--
-between
 ;
 align
 -
@@ -15743,21 +16640,6 @@ source
 -
 tab
 {
-color
-:
-var
-(
--
--
-theme
--
-faded
--
-tab
--
-color
-)
-;
 border
 :
 1px
@@ -15942,28 +16824,6 @@ bottom
 color
 :
 transparent
-;
-}
-.
-source
--
-tab
-path
-{
-fill
-:
-var
-(
--
--
-theme
--
-faded
--
-tab
--
-color
-)
 ;
 }
 .
